Organized the code again and added new file called app.js to get modules into the view.

--- a/default.html
+++ b/default.html
@@ -12,6 +12,7 @@
 		<div id="test2BDiv">testDiv-2B</div>
 		<script src="../../libs/jquery-1.9.1.min.js"></script>
 		<script src="config.js"></script>
+		<script src="app.js"></script>
 		<script src="init.js"></script>
 	</body>
 </html>
