Main initialization files are moved into the requirements directory, versioned the modulr library file, deleted the unversiioned file

--- a/default.html
+++ b/default.html
@@ -11,8 +11,6 @@
 		<div id="test2ADiv">testDiv-2A</div>
 		<div id="test2BDiv">testDiv-2B</div>
 		<script src="../../libs/jquery-1.9.1.min.js"></script>
-		<script src="config.js"></script>
-		<script src="app.js"></script>
-		<script src="init.js"></script>
+		<script src="modulr-0.1.0.js"></script>
 	</body>
 </html>
