Changed the method call system

--- a/default.html
+++ b/default.html
@@ -10,7 +10,13 @@
 		<div id="test1Div">testDiv-1</div>
 		<div id="test2ADiv">testDiv-2A</div>
 		<div id="test2BDiv">testDiv-2B</div>
-		<script src="../../libs/jquery-1.9.1.min.js"></script>
-		<script src="modulr-0.1.0.js"></script>
+		<script src="vendor/jquery-1.8.2.min.js"></script>
+		<script src="requirements/app.js"></script>
+		<script src="requirements/config.js"></script>
+		<script src="requirements/init.js"></script>
+		<script src="modulr-0.0.1.js"></script>
+		<script type="text/javascript">
+			modulr.load();
+		</script>
 	</body>
 </html>
